# mine-sweeper

./: .gitignore  README.md  com.github.adr.MineSweeper.json  meson.build
data/: com.github.adr.MineSweeper.appdata.xml.in  com.github.adr.MineSweeper.desktop.in  com.github.adr.MineSweeper.gschema.xml  meson.build  resources.gresource.xml
data/icons/: meson.build
docs/: diagrams.gaphor  todo.org
plan/: diagrams.gaphor  todo.org  use_case.org
po/: POTFILES  meson.build
src/: cell.py  dark_style.css  delme.py  light_style.css  listitem-cell.ui  main-content.ui  main.py  main_content.py  meson.build  mine-sweeper.gresource.xml  mine-sweeper.in  status-bar.ui  status_bar.py  style.css  window.py  window.ui
